--- a/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Product/Add.cshtml
+++ b/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Product/Add.cshtml
@@ -49,7 +49,7 @@
                         </div>
                         <div class="form-group">
                             <label for="SupplierID">Choose Supplier</label>
-                            <select name="SupplieID" class="form-control">
+                            <select name="SupplierID" class="form-control">
                                 @foreach (var item in Model.Suppliers)
                                 {
                                     <option value="@item.ID">@item.CompanyName</option>
