--- a/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -49,7 +49,7 @@
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>A</b>LT</span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Tyson</b>SOLUTION</span>
+                <span class="logo-lg"><b>Ware</b>HOUSE</span>
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
@@ -233,7 +233,7 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="/Admin/Category/AddCategory"><i class="fa fa-plus-square-o"></i> Category Add</a></li>
+                            <li><a href="/Admin/Category/Add"><i class="fa fa-plus-square-o"></i> Category Add</a></li>
                             <li><a href="/Admin/Category/CategoryList"><i class="fa fa-server"></i> Category List</a></li>
                             <li><a href="/Admin/Category/CategoryList"><i class="fa fa-book"></i> Category Update</a></li>
                             <li><a href="/Admin/Category/CategoryList"><i class="fa fa-trash"></i> Category Delete</a></li>
@@ -247,7 +247,7 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="/Admin/Product/AddProduct"><i class="fa fa-plus-square-o"></i> Product Add</a></li>
+                            <li><a href="/Admin/Product/Add"><i class="fa fa-plus-square-o"></i> Product Add</a></li>
                             <li><a href="/Admin/Product/ProductList"><i class="fa fa-server"></i> Product List</a></li>
                             <li><a href="/Admin/Product/ProductList"><i class="fa fa-book"></i> Product Update</a></li>
                             <li><a href="/Admin/Product/ProductList"><i class="fa fa-trash"></i> Delete</a></li>
@@ -261,10 +261,10 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="/Admin/AppUser/AddUser"><i class="fa fa-plus-square-o"></i> User Add</a></li>
-                            <li><a href="/Admin/AppUser/UserList"><i class="fa fa-server"></i> User List</a></li>
-                            <li><a href="/Admin/AppUser/UserList"><i class="fa fa-book"></i> User Update</a></li>
-                            <li><a href="/Admin/AppUser/UserList"><i class="fa fa-trash"></i> User Delete</a></li>
+                            <li><a href="/Admin/AppUser/Add"><i class="fa fa-plus-square-o"></i> User Add</a></li>
+                            <li><a href="/Admin/AppUser/AppUserList"><i class="fa fa-server"></i> User List</a></li>
+                            <li><a href="/Admin/AppUser/AppUserList"><i class="fa fa-book"></i> User Update</a></li>
+                            <li><a href="/Admin/AppUser/AppUserList"><i class="fa fa-trash"></i> User Delete</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
@@ -275,7 +275,7 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="/Admin/Supplier/AddSupplier"><i class="fa fa-plus-square-o"></i> Supplier Add</a></li>
+                            <li><a href="/Admin/Supplier/Add"><i class="fa fa-plus-square-o"></i> Supplier Add</a></li>
                             <li><a href="/Admin/Supplier/SupplierList"><i class="fa fa-server"></i> Supplier List</a></li>
                             <li><a href="/Admin/Supplier/SupplierList"><i class="fa fa-book"></i> Supplier Update</a></li>
                             <li><a href="/Admin/Supplier/SupplierList"><i class="fa fa-trash"></i> Supplier Delete</a></li>
