--- a/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Product/Update.cshtml
+++ b/WareHouseNTierProject/WareHouseNTierProject.UI/Areas/Admin/Views/Product/Update.cshtml
@@ -58,6 +58,7 @@
                             </select>
                         </div>
                     </div>
+                    <input type="text" style="visibility:hidden" name="ID" value="@Model.Products.ID" />
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
